# kaggle-m5

./: .gitignore  Makefile  README.md  README.org  pyproject.toml
nbs/: m5.ipynb
src/m5/: features.py  forecast.py  global_model.py  hierarchy.py  local_model.py  main_lgb.py  main_tpot.py  reconcile.R
src/rpy2_models/: exceptions.py  r_models_functions.py  ts_model.py  ts_model_cv.py
