[tool.poetry]
name = "kaggle-m5"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
jupyter = "^1.0.0"
notebook = "^6.0.3"
jupyter_contrib_nbextensions = "^0.5.1"
matplotlib = "^3.2.1"
statsmodels = "^0.11.1"
scikit-learn = "^0.22.2"
tqdm = "^4.44.1"
lightgbm = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
